[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "ztmwarsaw_Bex0n"
version = "0.0.1"
authors = [
  { name="Jakub Dawidowicz", email="jd439952@students.mimuw.edu.pl" },
]
description = "ZTM Warsaw package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Bex0n/ztm-warsaw-research"
Issues = "https://github.com/Bex0n/ztm-warsaw-research/issues"
